Closed
Bug 1814134
Opened 3 years ago
Closed 3 years ago
Perma /builds/worker/checkouts/gecko/build/clang-plugin/StmtToBlockMap.h:56:13: error: use of undeclared identifier 'Optional'; did you mean 'optionally'?
Categories
(Firefox Build System :: General, defect)
Firefox Build System
General
Tracking
(firefox111 fixed)
RESOLVED
FIXED
111 Branch
| Tracking | Status | |
|---|---|---|
| firefox111 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
Details
Attachments
(1 file)
[task 2023-01-31T09:21:38.136Z] 09:21:38 ERROR - /builds/worker/checkouts/gecko/build/clang-plugin/StmtToBlockMap.h:56:13: error: use of undeclared identifier 'Optional'; did you mean 'optionally'?
[task 2023-01-31T09:21:38.136Z] 09:21:38 INFO - if (Optional<CFGStmt> S = (*B)[I].getAs<CFGStmt>()) {
[task 2023-01-31T09:21:38.136Z] 09:21:38 INFO - ^~~~~~~~
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - optionally
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - /builds/worker/fetches/clang/include/clang/ASTMatchers/ASTMatchers.h:2782:58: note: 'optionally' declared here
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - extern const internal::VariadicOperatorMatcherFunc<1, 1> optionally;
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - ^
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - In file included from /builds/worker/checkouts/gecko/build/clang-plugin/DiagnosticsMatcher.cpp:5:
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - In file included from /builds/worker/checkouts/gecko/build/clang-plugin/DiagnosticsMatcher.h:8:
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - In file included from /builds/worker/checkouts/gecko/build/clang-plugin/ChecksIncludes.inc:22:
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - In file included from /builds/worker/checkouts/gecko/build/clang-plugin/MustReturnFromCallerChecker.h:9:
[task 2023-01-31T09:21:38.137Z] 09:21:38 ERROR - /builds/worker/checkouts/gecko/build/clang-plugin/StmtToBlockMap.h:56:31: error: expected ')'
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - if (Optional<CFGStmt> S = (*B)[I].getAs<CFGStmt>()) {
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - ^
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - /builds/worker/checkouts/gecko/build/clang-plugin/StmtToBlockMap.h:56:12: note: to match this '('
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - if (Optional<CFGStmt> S = (*B)[I].getAs<CFGStmt>()) {
[task 2023-01-31T09:21:38.137Z] 09:21:38 INFO - ^
[task 2023-01-31T09:21:38.138Z] 09:21:38 ERROR - /builds/worker/checkouts/gecko/build/clang-plugin/StmtToBlockMap.h:57:15: error: use of undeclared identifier 'S'
[task 2023-01-31T09:21:38.138Z] 09:21:38 INFO - Map[S->getStmt()] = std::make_pair(B, I);
[task 2023-01-31T09:21:38.138Z] 09:21:38 INFO - ^
[task 2023-01-31T09:21:38.138Z] 09:21:38 INFO - 3 errors generated.
| Assignee | ||
Comment 1•3 years ago
|
||
Clang trunk recently removed Optional (replaced with std::optional).
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/ea12a2ff5250
Fix clang plugin to build with recent clang trunk. r=firefox-build-system-reviewers,ahochheiden
Comment 3•3 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox111:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•