Bug 1814134 - Fix clang plugin to build with recent clang trunk. r=firefox-build-system-reviewers,ahochheiden

Clang trunk recently removed Optional (replaced with std::optional).

Differential Revision: https://phabricator.services.mozilla.com/D168406