build/clang-plugin/alpha/NonStdMoveChecker.h
@@ -17,7 +17,12 @@ public:
 private:
   CompilerInstance *CI;
 
-  static Optional<FixItHint>
+  static
+#if CLANG_VERSION_FULL >= 1600
+  std::optional<FixItHint>
+#else
+  Optional<FixItHint>
+#endif
   makeFixItHint(const MatchFinder::MatchResult &Result, const Expr *TargetExpr);
 };
 
